--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="styles/utility.css">
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <div class="banner">
+            <h1 class="banner-title">All Thinks Are<br> Possible If You<br>believe</h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+            <button class="banner-btn">Contact Us</button>
+        </div>
     </header>
 
     <main>
