--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles/utility.css">
 </head>
 <body>
-    <header class="header">
-        <div class="banner">
-            <h1 class="banner-title">All Thinks Are<br> Possible If You<br>believe</h1>
-            <p class="banner-description">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+    <header>
+        <div class="section">
+            <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum  available, but the majority have suffered alteration in some  form, by injected humour, or randomized words</p>
             <button class="banner-btn">Contact Us</button>
         </div>
     </header>
